--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -98,14 +98,14 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="Cy9-gp-toD">
-                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333331" height="121.66666666666669"/>
+                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333343" height="121.66666666666669"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="tuh-fI-wuy">
-                                <rect key="frame" x="0.0" y="696.66666666666663" width="75" height="81.333333333333371"/>
+                                <rect key="frame" x="0.0" y="696.66666666666663" width="75.000000000000114" height="81.333333333333371"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="AyR-GD-QUi">
-                                <rect key="frame" x="165" y="653.33333333333337" width="45" height="40.666666666666629"/>
+                                <rect key="frame" x="165" y="653.33333333333337" width="45.000000000000114" height="40.666666666666629"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -269,11 +269,11 @@
             </objects>
             <point key="canvasLocation" x="138" y="862"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Group-->
         <scene sceneID="QNc-ay-ssC">
             <objects>
                 <navigationController modalPresentationStyle="fullScreen" id="bXg-ni-pBe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="topRated" id="IFg-we-kES"/>
+                    <tabBarItem key="tabBarItem" title="Group" image="person.3" catalog="system" id="IFg-we-kES"/>
                     <navigationItem key="navigationItem" id="D6V-QF-rDi"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Ngc-QB-e9o">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -293,7 +293,7 @@
             </objects>
             <point key="canvasLocation" x="1986" y="-202"/>
         </scene>
-        <!--HomeScreen-->
+        <!--Group-->
         <scene sceneID="ben-V2-Lpt">
             <objects>
                 <viewController id="xaQ-HS-j1N" customClass="HomeScreenController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
@@ -367,7 +367,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2LV-wr-pXa"/>
                     </view>
-                    <navigationItem key="navigationItem" title="HomeScreen" id="gpk-sn-muT">
+                    <navigationItem key="navigationItem" title="Group" id="gpk-sn-muT">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3AM-Yh-ZRX">
                             <connections>
                                 <action selector="addGroup" destination="xaQ-HS-j1N" id="5LR-jH-tgC"/>
@@ -402,15 +402,16 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XWA-62-HYw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1028" y="129"/>
+            <point key="canvasLocation" x="1130" y="481"/>
         </scene>
     </scenes>
     <resources>
         <image name="White bubble" width="474" height="512"/>
         <image name="folder" catalog="system" width="64" height="46"/>
+        <image name="person.3" catalog="system" width="72" height="35"/>
         <image name="transparent" width="0.5" height="0.5"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Kmh-TN-bGA"/>
+        <segue reference="2wK-Oe-KOt"/>
     </inferredMetricsTieBreakers>
 </document>
