--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -98,14 +98,14 @@
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="Cy9-gp-toD">
-                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333331" height="121.66666666666669"/>
+                                <rect key="frame" x="262.66666666666669" y="44.000000000000007" width="112.33333333333343" height="121.66666666666669"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="tuh-fI-wuy">
-                                <rect key="frame" x="0.0" y="696.66666666666663" width="75" height="81.333333333333371"/>
+                                <rect key="frame" x="0.0" y="696.66666666666663" width="75.000000000000114" height="81.333333333333371"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="White bubble" translatesAutoresizingMaskIntoConstraints="NO" id="AyR-GD-QUi">
-                                <rect key="frame" x="165" y="653.33333333333337" width="45" height="40.666666666666629"/>
+                                <rect key="frame" x="165" y="653.33333333333337" width="45.000000000000114" height="40.666666666666629"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -301,7 +301,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CEe-eq-uLy" customClass="folde">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CEe-eq-uLy">
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JJb-jF-oyF">
@@ -314,15 +314,15 @@
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="groupeCell" id="Y5h-be-Ord" customClass="FolderCollectionViewCell" customModule="SwimCoach" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="EIb-oV-S0s" customClass="FolderCollectionViewCell" customModule="SwimCoach" customModuleProvider="target">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DIz-Js-hGl">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="FLS-eS-OLo">
+                                                <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="FLS-eS-OLo">
                                                     <rect key="frame" x="0.0" y="1.3333333333333357" width="180" height="105.33333333333333"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDv-qi-UQ1">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDv-qi-UQ1">
                                                     <rect key="frame" x="31.666666666666671" y="117.99999999999999" width="117.00000000000001" height="20.333333333333329"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -330,22 +330,21 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="LDv-qi-UQ1" firstAttribute="top" secondItem="FLS-eS-OLo" secondAttribute="bottom" constant="10" id="22M-5p-tW8"/>
-                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="top" secondItem="EIb-oV-S0s" secondAttribute="top" id="KyE-72-1e1"/>
+                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="top" secondItem="DIz-Js-hGl" secondAttribute="top" id="KyE-72-1e1"/>
                                                 <constraint firstAttribute="trailing" secondItem="FLS-eS-OLo" secondAttribute="trailing" id="arC-k8-mWh"/>
-                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="centerX" secondItem="EIb-oV-S0s" secondAttribute="centerX" id="eqE-LP-XDo"/>
-                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="height" secondItem="EIb-oV-S0s" secondAttribute="height" multiplier="0.6" id="fqz-XM-467"/>
-                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="leading" secondItem="EIb-oV-S0s" secondAttribute="leading" id="gRm-96-M4P"/>
-                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="width" secondItem="EIb-oV-S0s" secondAttribute="width" multiplier="0.65" id="r57-fc-vZh"/>
+                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="centerX" secondItem="DIz-Js-hGl" secondAttribute="centerX" id="eqE-LP-XDo"/>
+                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="height" secondItem="DIz-Js-hGl" secondAttribute="height" multiplier="0.6" id="fqz-XM-467"/>
+                                                <constraint firstItem="FLS-eS-OLo" firstAttribute="leading" secondItem="DIz-Js-hGl" secondAttribute="leading" id="gRm-96-M4P"/>
+                                                <constraint firstItem="LDv-qi-UQ1" firstAttribute="width" secondItem="DIz-Js-hGl" secondAttribute="width" multiplier="0.65" id="r57-fc-vZh"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="180" height="180"/>
                                         <connections>
                                             <outlet property="folderImage" destination="FLS-eS-OLo" id="9eA-9i-cXE"/>
                                             <outlet property="groupeName" destination="LDv-qi-UQ1" id="ZJR-Nw-UEk"/>
+                                            <segue destination="YiC-u6-Zzb" kind="show" identifier="presenceSegue" id="TiD-by-wGp"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -383,11 +382,86 @@
             </objects>
             <point key="canvasLocation" x="2401" y="394"/>
         </scene>
+        <!--Item 2-->
+        <scene sceneID="R1Y-We-h4D">
+            <objects>
+                <viewController id="vh5-dn-IWK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="p95-Ys-DxV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="ojD-3V-Lrg"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="LUv-QS-28B"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTy-H1-wgD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4244" y="726"/>
+        </scene>
+        <!--Presence-->
+        <scene sceneID="AIc-E4-5Zu">
+            <objects>
+                <navigationController id="qMm-ja-Jo2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Presence" image="person.3" catalog="system" id="21Z-23-j8a"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8hR-Iq-JLg">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="T4p-xM-xpo" kind="relationship" relationship="rootViewController" id="hiI-c4-LDs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dsB-iE-HQR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4244" y="-70"/>
+        </scene>
+        <!--Presence-->
+        <scene sceneID="ZaS-HB-46j">
+            <objects>
+                <viewController id="T4p-xM-xpo" customClass="PresenceController" customModule="SwimCoach" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lqE-ar-7Hl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="a6Z-dU-m4r"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Presence" id="pFD-Ue-HgC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rGr-Nu-ZB0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5074" y="-70"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="xW3-Hy-Klk">
+            <objects>
+                <tabBarController id="YiC-u6-Zzb" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="fjv-Yk-caZ"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="transparent" id="YO3-Vb-V8I">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="qMm-ja-Jo2" kind="relationship" relationship="viewControllers" id="O4z-qx-DlV"/>
+                        <segue destination="vh5-dn-IWK" kind="relationship" relationship="viewControllers" id="fPP-gr-Yes"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pQb-av-eoZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3297" y="394"/>
+        </scene>
     </scenes>
     <resources>
         <image name="White bubble" width="474" height="512"/>
         <image name="folder" catalog="system" width="64" height="46"/>
         <image name="person.3" catalog="system" width="72" height="35"/>
+        <image name="transparent" width="0.5" height="0.5"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="VLg-le-hSn"/>
