--- a/SwimCoach/View/Base.lproj/Main.storyboard
+++ b/SwimCoach/View/Base.lproj/Main.storyboard
@@ -409,7 +409,81 @@
                     <view key="view" contentMode="scaleToFill" id="1rC-Be-MZo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YSS-DW-iY1">
+                                <rect key="frame" x="0.0" y="88" width="375" height="641"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="personCell" rowHeight="150" id="AXF-Y3-xDL" customClass="PersonViewCell" customModule="SwimCoach" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AXF-Y3-xDL" id="5iW-hb-U7g">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8Wu-s1-npQ">
+                                                    <rect key="frame" x="20" y="49.666666666666671" width="187.66666666666666" height="50.666666666666671"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yX4-uR-vNh">
+                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="20.333333333333332"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yn-ON-AEl">
+                                                            <rect key="frame" x="0.0" y="30.333333333333336" width="150" height="20.333333333333336"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="3Yn-ON-AEl" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="BZE-MD-BNK"/>
+                                                        <constraint firstItem="yX4-uR-vNh" firstAttribute="width" secondItem="8Wu-s1-npQ" secondAttribute="width" multiplier="0.8" id="wdu-vx-aYF"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ijh-sf-54w">
+                                                    <rect key="frame" x="306" y="59.666666666666657" width="51" height="31"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </switch>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="ijh-sf-54w" firstAttribute="centerY" secondItem="5iW-hb-U7g" secondAttribute="centerY" id="UjV-rp-v5M"/>
+                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="leading" secondItem="5iW-hb-U7g" secondAttribute="leadingMargin" constant="5" id="dFX-S2-rrD"/>
+                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="width" secondItem="5iW-hb-U7g" secondAttribute="width" multiplier="0.5" id="heF-xg-GCh"/>
+                                                <constraint firstItem="8Wu-s1-npQ" firstAttribute="centerY" secondItem="5iW-hb-U7g" secondAttribute="centerY" id="ktg-5l-vJY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ijh-sf-54w" secondAttribute="trailing" constant="5" id="ldF-8g-hAX"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="firstNameLabel" destination="3Yn-ON-AEl" id="r1k-IE-1JW"/>
+                                            <outlet property="isPresentSwitch" destination="ijh-sf-54w" id="BNx-kH-tZL"/>
+                                            <outlet property="lastNameLabel" destination="yX4-uR-vNh" id="Lkz-5W-AxA"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" id="R3j-WJ-FS2">
+                                <rect key="frame" x="169" y="387" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YSS-DW-iY1" firstAttribute="leading" secondItem="k6S-kU-clu" secondAttribute="leading" id="GXK-DN-exj"/>
+                            <constraint firstItem="k6S-kU-clu" firstAttribute="trailing" secondItem="YSS-DW-iY1" secondAttribute="trailing" id="Q8o-us-yvr"/>
+                            <constraint firstItem="YSS-DW-iY1" firstAttribute="top" secondItem="k6S-kU-clu" secondAttribute="top" id="Tzi-NQ-tUu"/>
+                            <constraint firstItem="k6S-kU-clu" firstAttribute="bottom" secondItem="YSS-DW-iY1" secondAttribute="bottom" id="xpn-TZ-tHg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="k6S-kU-clu"/>
                     </view>
                     <navigationItem key="navigationItem" id="4ca-eV-cFV">
@@ -417,10 +491,14 @@
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="activityWheel" destination="R3j-WJ-FS2" id="EyO-q3-sV2"/>
+                        <outlet property="tableView" destination="YSS-DW-iY1" id="xR5-i1-07a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="72i-RD-BlV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3871" y="-214"/>
+            <point key="canvasLocation" x="3869.5999999999999" y="-214.28571428571431"/>
         </scene>
     </scenes>
     <resources>
